<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ConfirmationActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_food"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <!-- Confirmation Nama Makanan -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Food Name:"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvSelectedFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selected Food"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Confirmation Jumlah Porsi -->
    <TextView
        android:id="@+id/tvServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servings"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Confirmation Nama pengorder -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordering_name"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Input Catatan Tambahan -->
    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_notes"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <!-- Input Catatan Tambahan -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_order"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/backtoMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"/>

</LinearLayout>